# v2

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
programs/cubik/: Cargo.toml
programs/cubik/src/: constant.rs  errors.rs  event.rs  lib.rs
programs/cubik/src/instructions/: admin.rs  admin_config.rs  admin_create.rs  contribution.rs  contribution_sol.rs  contribution_spl.rs  create_admin.rs  create_contribution.rs  create_event.rs  create_event_join.rs  create_event_sponsor_with_sol.rs  create_event_sponsor_with_spl.rs  create_project.rs  create_sub_admin.rs  create_user.rs  donation.rs  event.rs  event_create.rs  event_join.rs  event_participant_create.rs  event_participant_invite.rs  event_participant_update.rs  event_team_close.rs  event_team_create.rs  event_update.rs  mod.rs  project.rs  project_close.rs  project_create.rs  project_tip_sol.rs  project_tip_spl.rs  project_transfer.rs  project_update.rs  sponsor.rs  sponsor_close.rs  sponsor_create.rs  sponsor_create_custody.rs  sponsor_update.rs  subadmin.rs  tip.rs  (+7 more)
programs/cubik/src/state/: admin.rs  constant.rs  event.rs  event_join.rs  event_participant.rs  member.rs  mod.rs  project.rs  sponsor.rs  subadmin.rs  user.rs
programs/v2/: Cargo.toml
programs/v2/src/: errors.rs  event.rs  lib.rs
programs/v2/src/instructions/: create_event.rs  create_event_join.rs  create_event_sponsor.rs  create_event_sponsor_with_sol.rs  create_event_sponsor_with_spl.rs  create_project.rs  create_user.rs  mod.rs  tip_project.rs  update_event.rs  update_event_join.rs  (+3 more)
sdk/: .solitarc.js  (+4 more)
(+61 files in other folders)
