[package]
name = "cubik"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cubik"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
squads-multisig-program = { version = "0.2.1", features = [
    "cpi",
    "no-entrypoint",
] }
anchor-spl = "0.28.0"
