[package]
name = "cubik"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cubik"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
mainnet-beta = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.29.0"
squads-multisig-program = { version = "2.0.0", features = ["cpi"] }
anchor-spl = "0.29.0"
solana-program = "*"
