[package]
name = "cubik_v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
squads-multisig = '0.0.22'
squads-multisig-program = { version = "0.2.1", features = [
    "cpi",
    "no-entrypoint",
] }
anchor-spl = "0.29.0"
